<resources>
    <string name="app_name">HomeWork</string>
    <string name="switzerland">Switzerland</string>
    <string name="austria">Austria</string>
    <string name="italy">Italy</string>
    <string name="poland">Poland</string>
    <string name="columbia">Columbia</string>
    <string name="madagascar">Madagascar</string>
    <string name="thailand">Thailand</string>
    <string name="denmark">Denmark</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nextScreenButton">Go to random Image</string>
    <string name="get_random_image">Get Random Image</string>
    <string name="set_text">Enter Text</string>
    <string name="user_keyword">User keyword</string>
    <string name="name">Имя Фамилия</string>
    <string name="phone_number">Номер телефона</string>
    <string name="contact_name">Имя контакта</string>
    <string name="phone">+7ХХХХХХХХХ</string>
</resources>