<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".FlagsFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/austria"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/austria"
        app:layout_constraintEnd_toEndOf="@+id/austria"
        app:layout_constraintStart_toStartOf="@+id/austria" />

    <LinearLayout
        android:id="@+id/austria"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/teal_200"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:background="@color/red" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:background="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="bottom"
            android:background="@color/red" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/poland"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/poland"
        app:layout_constraintEnd_toEndOf="@+id/poland"
        app:layout_constraintStart_toStartOf="@+id/poland" />

    <LinearLayout
        android:id="@+id/poland"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/teal_200"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/red" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/italy"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/italy"
        app:layout_constraintEnd_toEndOf="@+id/italy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/austria" />
    <LinearLayout
        android:id="@+id/italy"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/austria">



        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/italy_green" />

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/italy_white" />

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:background="@color/italy_red" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/columbia"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/columbia"
        app:layout_constraintEnd_toEndOf="@+id/columbia"
        app:layout_constraintStart_toStartOf="@+id/columbia" />

    <LinearLayout
        android:id="@+id/columbia"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poland">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:background="@color/columbia_yellow"
            android:layout_weight="0.5"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="top"
            android:layout_weight="0.25"
            android:background="@color/columbia_blue" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.25"
            android:background="@color/columbia_red" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/madagascar"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/madagascar"
        app:layout_constraintEnd_toEndOf="@+id/madagascar"
        app:layout_constraintStart_toStartOf="@+id/madagascar" />

    <LinearLayout
        android:id="@+id/madagascar"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/italy">

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:background="@color/madagascar_red" />

        <FrameLayout
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_gravity="end"
            android:layout_weight="0.5"
            android:background="@color/madagascar_green" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/thailand"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/thailand"
        app:layout_constraintEnd_toEndOf="@+id/thailand"
        app:layout_constraintStart_toStartOf="@+id/thailand" />

    <LinearLayout
        android:id="@+id/thailand"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/columbia">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="top"
            android:background="@color/thailand_red" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="top"
            android:background="@color/thailand_blue"
            android:layout_marginVertical="15dp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="bottom"
            android:background="@color/thailand_red" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/denmark"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/denmark"
        app:layout_constraintEnd_toEndOf="@+id/denmark"
        app:layout_constraintStart_toStartOf="@+id/denmark" />

    <LinearLayout
        android:id="@+id/denmark"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/madagascar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_marginBottom="7.5dp">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:layout_marginEnd="7.5dp"
                android:background="@color/denmark_red"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="7.5dp"
                android:background="@color/denmark_red"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_weight="0.5"
            android:layout_marginTop="7.5dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:layout_marginEnd="7.5dp"
                android:background="@color/denmark_red"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:layout_marginStart="7.5dp"
                android:background="@color/denmark_red"/>
        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/switzerland"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/switzerland"
        app:layout_constraintEnd_toEndOf="@+id/switzerland"
        app:layout_constraintStart_toStartOf="@+id/switzerland" />

    <LinearLayout
        android:id="@+id/switzerland"
        android:layout_width="180dp"
        android:layout_height="90dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:background="@color/switzerland_red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thailand">

        <FrameLayout
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"/>

        <FrameLayout
            android:layout_width="60dp"
            android:layout_height="20dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"/>

        <FrameLayout
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/white"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <Button
        android:id="@+id/buttonToRandom"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="100dp"
        android:text="@string/nextScreenButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>